# econv

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD-PARTY-NOTICES.md  vcpkg.json
.github/workflows/: ci.yml
docs/: unix-build.md  windows-build.md
scripts/: add-to-path.bat  add-to-system-path.bat  build-unix.sh  build.bat  build.ps1  bump-version.bat  bump-version.ps1  manual-test.ps1  release-unix.sh  release.bat  release.ps1  set-version.bat  set-version.ps1
src/: main.cpp  version.rc.in
tests/: smoke-test.cmake
